crates/whiphand-tui/tests/snapshots/snapshots__loading_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Runs  (experimental)                                                                                                                                                        "
"┌ Runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Loading…                                                                                                                                                                                              │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" / filter  ·  n new run  ·  m answer the step waiting on you  ·  o ongoing runs in every workspace  ·  c cancel the run  ·  r resume the run  ·  R rename the run  ·  L lock or unlock the run  ·  x del"
