crates/whiphand-tui/tests/snapshots/snapshots__manual_commenting_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Decision  (experimental)                                                                                                                                                    "
"┌ Decision needed · Ship it? ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ stage 2 of 3 · Checkout · attempt 2 of 3                                                                                                                                                             │"
"│diff --git a/src/cart.ts b/src/cart.ts                                                                                                                                                                │"
"│--- a/src/cart.ts                                                                                                                                                                                     │"
"│+++ b/src/cart.ts                                                                                                                                                                                     │"
"│@@ -10,3 +10,4 @@ export function total(items: Item[]) {                                                                                                                                              │"
"│   let sum = 0;                                                                                                                                                                                       │"
"│-  for (const i of items) sum += i.price;                                                                                                                                                             │"
"│+  for (const i of items) sum += i.price * i.qty;                                                                                                                                                     │"
"│+  // quantities, not lines                                                                                                                                                                           │"
"│   return sum;                                                                                                                                                                                        │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│  Feedback*                                                                                                                                                                                           │"
"│    Quantities need a test.                                                                                                                                                                           │"
"│  Artifacts (Enter pages one)                                                                                                                                                                         │"
"│  review  .whiphand/runs/20261010-100000-a1b2/review.md                                                                                                                                               │"
"│  Changes (Enter comments on one)                                                                                                                                                                     │"
"│▸ M src/cart.ts  +2 -1  ✎                                                                                                                                                                             │"
"│      Name it lineTotal.▏                                                                                                                                                                             │"
"│  A src/cart.test.ts  +12 -0                                                                                                                                                                          │"
"│ a Continue  ·  b Request changes  ·  X Abort run                                                                                                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Enter new line  ·  Esc done  ·  Ctrl-e $EDITOR                                                                                                                                                         "
